// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normal operation without any changes 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Object {
        "color": "black",
      }
    }
  >
    Made with
  </Text>
  <Text
    style={
      Object {
        "color": "darkred",
      }
    }
  >
     ♥︎ 
  </Text>
  <Text
    style={
      Object {
        "color": "black",
      }
    }
  >
    in Toronto
  </Text>
</View>
`;

exports[`normal operation, place changed 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Object {
        "color": "black",
      }
    }
  >
    Made with
  </Text>
  <Text
    style={
      Object {
        "color": "darkred",
      }
    }
  >
     ♥︎ 
  </Text>
  <Text
    style={
      Object {
        "color": "black",
      }
    }
  >
    in New York
  </Text>
</View>
`;
